--- a/home.html
+++ b/home.html
@@ -23,13 +23,16 @@
             href="https://drive.google.com/file/d/17YaFGgeKxcM7r_ytoRYRtatku-OvnxOs/view?usp=sharing"
             target="_blank"
           >
-            <button class="main-btn">Resume</button>
+            <button class="main-btn" id="main-btn">Resume</button>
           </a>
         </div>
       </nav>
     </header>
 
     <main>
+      <!-- <audio id="hover-sound">
+        <source src="./assets/audio/mixkit-plastic-bubble-click-1124.wav" />
+      </audio> -->
       <div class="main-padding">
         <!-- Hero Section -->
         <section class="hero-section">
@@ -56,17 +59,25 @@
     <footer>
       <div class="footer-nav-wrap">
         <div class="footer-nav-links-wrap">
-          <a class="links" href="/work.html">Work</a>
-          <a class="links" href="/about.html">About</a>
-          <a class="links" href="https://www.linkedin.com/in/harry-oghonyon/"
+          <a class="links" href="/work.html" id="link-1">Work</a>
+          <a class="links" href="/about.html" id="link-2">About</a>
+          <a
+            id="link-3"
+            class="links"
+            href="https://www.linkedin.com/in/harry-oghonyon/"
             >Linkedin</a
           >
-          <a class="links email-link" href="mailto:harrytones.design@gmail.com"
+          <a
+            id="link-4"
+            class="links email-link"
+            href="mailto:harrytones.design@gmail.com"
             >Email</a
           >
         </div>
       </div>
     </footer>
     <script src="./assets/js/home.js"></script>
+    <script src="./assets/js/sound.js"></script>
+    <script src="./assets/js/clock.js"></script>
   </body>
 </html>
