update on mobile and desktop pages
Update image scroll on mobile and desktop

--- a/about.html
+++ b/about.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <div class="preloader">
+      <img
+        class="preloader-img"
+        src="./assets/img/Preloader Spin.svg"
+        loading="lazy"
+        alt=""
+      />
+    </div>
+
     <header>
       <nav class="nav-wrap">
         <div class="header-wrap">
@@ -27,9 +36,6 @@
     </header>
 
     <main>
-      <audio id="hover-sound">
-        <source src="./assets/audio/mixkit-plastic-bubble-click-1124.wav" />
-      </audio>
       <section class="intro-container">
         <div class="intro-block-wrap">
           <div class="intro-block">
@@ -49,11 +55,13 @@
                   alt=""
                   class="intro-img intro-img-2"
                 /> -->
-                <img
+                <!-- <img
                   src=".//assets/img/me pic 3.png"
                   alt=""
                   class="intro-img intro-img-3"
-                />
+                /> -->
+
+                <img class="intro-img" src="./assets/img/me gifs.gif" alt="" />
               </div>
             </div>
 
@@ -71,10 +79,16 @@
                     alt=""
                     class="intro-img intro-img-2"
                   /> -->
-                  <img
+                  <!-- <img
                     src=".//assets/img/me pic 3.png"
                     alt=""
                     class="intro-img intro-img-3"
+                  /> -->
+
+                  <img
+                    class="intro-img"
+                    src="./assets/img/me gifs.gif"
+                    alt=""
                   />
                 </span>
               </div>
