--- a/work.html
+++ b/work.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <div class="preloader">
+      <img
+        class="preloader-img"
+        src="./assets/img/Preloader Spin.svg"
+        loading="lazy"
+        alt=""
+      />
+    </div>
+
     <header>
       <nav class="nav-wrap">
         <div class="header-wrap">
@@ -27,9 +36,6 @@
     </header>
 
     <main>
-      <audio id="hover-sound">
-        <source src="./assets/audio/mixkit-plastic-bubble-click-1124.wav" />
-      </audio>
       <!-- <div class="main-padding">
         
       </div> -->
@@ -712,19 +718,30 @@
           <div class="social-links-container">
             <div class="social-links-wrap">
               <div class="link-wrap link-wrap-1">
-                <a class="social-links social-links-1 hero-p" href=""
+                <a
+                  class="social-links social-links-1 hero-p"
+                  href="https://twitter.com/hahrytones"
+                  target="_blank"
                   >Twitter</a
                 >
                 <span class="social-links hero-p">,</span>
               </div>
               <div class="link-wrap link-wrap-2">
-                <a class="social-links social-links-2 hero-p" href=""
+                <a
+                  class="social-links social-links-2 hero-p"
+                  href="https://www.linkedin.com/in/harry-oghonyon/"
+                  target="_blank"
                   >Linkedin</a
                 >
                 <span class="social-links hero-p">,</span>
               </div>
               <div class="link-wrap link-wrap-3">
-                <a class="social-links social-links-3 hero-p" href="">Github</a>
+                <a
+                  class="social-links social-links-3 hero-p"
+                  href="https://github.com/harryoghonyon"
+                  target="_blank"
+                  >Github</a
+                >
               </div>
             </div>
           </div>
@@ -796,5 +813,6 @@
     <script src="./assets/js/sound.js"></script>
     <script src="./assets/js/work.js"></script>
     <script src="./assets/js/clock.js"></script>
+    <script src="./assets/js/spotify.js"></script>
   </body>
 </html>
