--- a/home.html
+++ b/home.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Oghonyon</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="preloader">
+      <img
+        class="preloader-img"
+        src="./assets/img/Preloader Spin.svg"
+        loading="lazy"
+        alt=""
+      />
+    </div>
+
+    data-aos="fade-down" data-aos-easing="linear" data-aos-delay="2500"
+    data-aos-duration="1500"
+
     <header>
       <nav class="nav-wrap">
         <div class="header-wrap">
@@ -35,6 +48,9 @@
       </audio> -->
       <div class="main-padding">
         <!-- Hero Section -->
+        data-aos="fade-up" data-aos-easing="linear" data-aos-delay="2500"
+        data-aos-duration="1500"
+
         <section class="hero-section">
           <div class="hero-wrap">
             <h1 class="hero-txt">
@@ -79,5 +95,9 @@
     <script src="./assets/js/home.js"></script>
     <script src="./assets/js/sound.js"></script>
     <script src="./assets/js/clock.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- <script>
+      AOS.init();
+    </script> -->
   </body>
 </html>
