Comment aos animation code

--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
       />
     </div>
 
-    data-aos="fade-down" data-aos-easing="linear" data-aos-delay="2500"
-    data-aos-duration="1500"
+    <!-- data-aos="fade-down" data-aos-easing="linear" data-aos-delay="2500"
+    data-aos-duration="1500" -->
 
     <header>
       <nav class="nav-wrap">
@@ -48,8 +48,8 @@
       </audio> -->
       <div class="main-padding">
         <!-- Hero Section -->
-        data-aos="fade-up" data-aos-easing="linear" data-aos-delay="2500"
-        data-aos-duration="1500"
+        <!-- data-aos="fade-up" data-aos-easing="linear" data-aos-delay="2500"
+        data-aos-duration="1500" -->
 
         <section class="hero-section">
           <div class="hero-wrap">
