--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
     <script src="./assets/js/home.js"></script>
     <script src="./assets/js/sound.js"></script>
     <script src="./assets/js/clock.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
     <!-- <script>
       AOS.init();
     </script> -->
