add available for freelance projects with blinker

--- a/about.html
+++ b/about.html
@@ -28,6 +28,17 @@
             </span>
             <p class="time-location location-txt">WAT</p>
           </div>
+
+          <div class="freelance-container">
+            <div class="freelance-wrap">
+              <p class="freelance-txt">Available for freelance projects</p>
+              <img
+                class="blink blink-img"
+                src="./assets/img/blinker circle.svg"
+                alt=""
+              />
+            </div>
+          </div>
           <a href="./home.html">
             <button id="back-btn-abt" class="main-btn">Back</button>
           </a>
