--- a/home.html
+++ b/home.html
@@ -32,6 +32,17 @@
             </span>
             <p class="time-location location-txt">WAT</p>
           </div>
+
+          <div class="freelance-container">
+            <div class="freelance-wrap">
+              <p class="freelance-txt">Available for freelance projects</p>
+              <img
+                class="blink blink-img"
+                src="./assets/img/blinker circle.svg"
+                alt=""
+              />
+            </div>
+          </div>
           <a
             href="https://drive.google.com/file/d/17YaFGgeKxcM7r_ytoRYRtatku-OvnxOs/view?usp=sharing"
             target="_blank"
