remove spotify file from home, link spotify playlist
add available for freelance on mobile

--- a/about.html
+++ b/about.html
@@ -282,7 +282,12 @@
         <div class="spotify-back-up-wrap">
           <div class="spotify-playlist-wrap">
             <img src="/assets/img/Spotify Vector.svg" alt="" />
-            <p class="spotify-txt">My Spotify Playlist</p>
+            <a
+              href="https://open.spotify.com/playlist/3ZCIou20italOXx8k7sgss?si=4ea2848b9abc4330"
+              class="spotify-txt"
+              target="_blank"
+              >My Spotify Playlist</a
+            >
           </div>
           <div class="social-links-container">
             <div class="social-links-wrap">
