--- a/home.html
+++ b/home.html
@@ -64,6 +64,16 @@
 
         <section class="hero-section">
           <div class="hero-wrap">
+            <div class="mobile-freelance-container">
+              <div class="freelance-wrap">
+                <p class="freelance-txt">Available for freelance projects</p>
+                <img
+                  class="blink blink-img"
+                  src="./assets/img/blinker circle.svg"
+                  alt=""
+                />
+              </div>
+            </div>
             <h1 class="hero-txt">
               Product Designer & Frontend Dev with a knack for designing and
               building A1 products
