Add casestudy links for healthily and thirsti project

--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
                   <h3 class="works-name">Krypt Labs</h3>
                   <div class="work-detials-wrap">
                     <p class="work-details">FEB - MAR ‘23</p>
-                    <p class="work-details">DESIGN & DEV</p>
+                    <p class="work-details">UI DESIGN & DEV</p>
                   </div>
                 </div>
 
@@ -232,7 +232,7 @@
                   <h3 class="works-name">Wellfed</h3>
                   <div class="work-detials-wrap">
                     <p class="work-details">DEC ‘22 - JAN ‘23</p>
-                    <p class="work-details">DESIGN & DEV</p>
+                    <p class="work-details">UI DESIGN & DEV</p>
                   </div>
                 </div>
 
@@ -326,7 +326,7 @@
                   <h3 class="works-name">Edekee</h3>
                   <div class="work-detials-wrap">
                     <p class="work-details">SEP - OCT ‘22</p>
-                    <p class="work-details">DESIGN & DEV</p>
+                    <p class="work-details">UI DESIGN</p>
                   </div>
                 </div>
 
@@ -418,7 +418,7 @@
                   <h3 class="works-name">Granity</h3>
                   <div class="work-detials-wrap">
                     <p class="work-details">NOV ‘22</p>
-                    <p class="work-details">DESIGN & DEV</p>
+                    <p class="work-details">UI DESIGN</p>
                   </div>
                 </div>
 
@@ -510,16 +510,24 @@
                   <h3 class="works-name">Thirsti</h3>
                   <div class="work-detials-wrap">
                     <p class="work-details">AUG ‘22</p>
-                    <p class="work-details">DESIGN & DEV</p>
+                    <p class="work-details">UX RESEARCH & UI DESIGN</p>
                   </div>
                 </div>
 
                 <span class="stroke"></span>
 
                 <div class="work-button-wrap">
-                  <button class="feat-work-btn main-btn" id="proj-5-casestudy">
-                    Case Study
-                  </button>
+                  <a
+                    href="https://heathered-golf-99f.notion.site/Thirsti-Case-study-b7e3f96b046c4198849d1c8b6d6b4306"
+                    target="_blank"
+                  >
+                    <button
+                      class="feat-work-btn main-btn"
+                      id="proj-5-casestudy"
+                    >
+                      Case Study
+                    </button>
+                  </a>
                 </div>
               </div>
 
@@ -602,16 +610,24 @@
                   <h3 class="works-name">Healthily</h3>
                   <div class="work-detials-wrap">
                     <p class="work-details">JUNE -JULY ‘22</p>
-                    <p class="work-details">DESIGN & DEV</p>
+                    <p class="work-details">UX RESEARCH & UI DESIGN</p>
                   </div>
                 </div>
 
                 <span class="stroke"></span>
 
                 <div class="work-button-wrap">
-                  <button class="feat-work-btn main-btn" id="proj-6-casestudy">
-                    Case Study
-                  </button>
+                  <a
+                    href="https://heathered-golf-99f.notion.site/Healthily-Case-study-d95a278817ea4621b647df13a27b1b58"
+                    target="_blank"
+                  >
+                    <button
+                      class="feat-work-btn main-btn"
+                      id="proj-6-casestudy"
+                    >
+                      Case Study
+                    </button>
+                  </a>
                 </div>
               </div>
 
