Update breakpoint 1980 and add granity url link

--- a/work.html
+++ b/work.html
@@ -242,9 +242,17 @@
                   <button class="feat-work-btn main-btn" id="proj-2-website">
                     Live Website
                   </button>
-                  <button class="feat-work-btn main-btn" id="proj-2-casestudy">
-                    Case Study
-                  </button>
+                  <a
+                    href="https://heathered-golf-99f.notion.site/Wellfed-Case-study-fb9308f5bba4426c9dcb9d47c0ed550e"
+                    target="_blank"
+                  >
+                    <button
+                      class="feat-work-btn main-btn"
+                      id="proj-2-casestudy"
+                    >
+                      Case Study
+                    </button>
+                  </a>
                 </div>
               </div>
 
@@ -425,9 +433,17 @@
                 <span class="stroke"></span>
 
                 <div class="work-button-wrap">
-                  <button class="feat-work-btn main-btn" id="proj-4-casestudy">
-                    Case Study
-                  </button>
+                  <a
+                    href="https://heathered-golf-99f.notion.site/Granity-Case-study-9df6387850f243b1bf58e5e4df1f5b12"
+                    target="_blank"
+                  >
+                    <button
+                      class="feat-work-btn main-btn"
+                      id="proj-4-casestudy"
+                    >
+                      Case Study
+                    </button>
+                  </a>
                 </div>
               </div>
 
