add favicon and update project links

--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Oghonyon</title>
+    <link rel="icon" type="image/jpg" href="assets/img/Preloader Spin.svg" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -74,12 +75,23 @@
                 <span class="stroke"></span>
 
                 <div class="work-button-wrap">
-                  <button class="feat-work-btn main-btn" id="proj-1-website">
-                    Live Website
-                  </button>
-                  <button class="feat-work-btn main-btn" id="proj-1-casestudy">
-                    Case Study
-                  </button>
+                  <a href="https://kryptlabs.netlify.app" target="_blank">
+                    <button class="feat-work-btn main-btn" id="proj-1-website">
+                      Live Website
+                    </button>
+                  </a>
+
+                  <a
+                    href="https://heathered-golf-99f.notion.site/Krypt-Labs-Case-stud-a55a28aedb9d4f87b56f2f93daa8dfb4"
+                    target="_blank"
+                  >
+                    <button
+                      class="feat-work-btn main-btn"
+                      id="proj-1-casestudy"
+                    >
+                      Case Study
+                    </button>
+                  </a>
                 </div>
               </div>
 
@@ -239,9 +251,11 @@
                 <span class="stroke"></span>
 
                 <div class="work-button-wrap">
-                  <button class="feat-work-btn main-btn" id="proj-2-website">
-                    Live Website
-                  </button>
+                  <a href="https://wellfed-proj.netlify.app" target="_blank">
+                    <button class="feat-work-btn main-btn" id="proj-2-website">
+                      Live Website
+                    </button>
+                  </a>
                   <a
                     href="https://heathered-golf-99f.notion.site/Wellfed-Case-study-fb9308f5bba4426c9dcb9d47c0ed550e"
                     target="_blank"
@@ -341,9 +355,11 @@
                 <span class="stroke"></span>
 
                 <div class="work-button-wrap">
-                  <button class="feat-work-btn main-btn" id="proj-3-website">
-                    Live Website
-                  </button>
+                  <a href="https://edekee.com" target="_blank">
+                    <button class="feat-work-btn main-btn" id="proj-3-website">
+                      Live Website
+                    </button>
+                  </a>
                 </div>
               </div>
 
