--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Oghonyon</title>
+    <link rel="icon" type="image/jpg" href="assets/img/Preloader Spin.svg" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
@@ -102,12 +103,14 @@
             id="link-3"
             class="links"
             href="https://www.linkedin.com/in/harry-oghonyon/"
+            target="_blank"
             >Linkedin</a
           >
           <a
             id="link-4"
             class="links email-link"
             href="mailto:harrytones.design@gmail.com"
+            target="_blank"
             >Email</a
           >
         </div>
