lazy load on my img

--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
                 class="blink blink-img"
                 src="./assets/img/blinker circle.svg"
                 alt=""
+                loading="lazy"
               />
             </div>
           </div>
