add htaccess to remove html extension from links
add second font for the p text

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
               />
             </div>
           </div>
-          <a href="./home.html">
+          <a href="./home">
             <button id="back-btn-abt" class="main-btn">Back</button>
           </a>
         </div>
