--- a/home.html
+++ b/home.html
@@ -97,8 +97,8 @@
     <footer>
       <div class="footer-nav-wrap">
         <div class="footer-nav-links-wrap">
-          <a class="links" href="/work.html" id="link-1">Work</a>
-          <a class="links" href="/about.html" id="link-2">About</a>
+          <a class="links" href="/work" id="link-1">Work</a>
+          <a class="links" href="/about" id="link-2">About</a>
           <a
             id="link-3"
             class="links"
