comment out work project desc container

--- a/work.html
+++ b/work.html
@@ -95,7 +95,7 @@
                 </div>
               </div>
 
-              <div class="work-project-desc-container">
+              <!-- <div class="work-project-desc-container">
                 <div class="carousel" id="carousel-1">
                   <div class="image-container large">
                     <img
@@ -233,7 +233,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -270,7 +270,7 @@
                 </div>
               </div>
 
-              <div class="work-project-desc-container">
+              <!-- <div class="work-project-desc-container">
                 <div class="work-img-wrap" id="Wellfed"></div>
 
                 <div class="work-about-role-container">
@@ -337,7 +337,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -363,7 +363,7 @@
                 </div>
               </div>
 
-              <div class="work-project-desc-container">
+              <!-- <div class="work-project-desc-container">
                 <div class="work-img-wrap" id="edekee"></div>
 
                 <div class="work-about-role-container">
@@ -431,7 +431,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -463,7 +463,7 @@
                 </div>
               </div>
 
-              <div class="work-project-desc-container">
+              <!-- <div class="work-project-desc-container">
                 <div class="work-img-wrap" id="granity"></div>
 
                 <div class="work-about-role-container">
@@ -531,7 +531,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -563,7 +563,7 @@
                 </div>
               </div>
 
-              <div class="work-project-desc-container">
+              <!-- <div class="work-project-desc-container">
                 <div class="work-img-wrap" id="thirsti"></div>
 
                 <div class="work-about-role-container">
@@ -631,7 +631,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -663,7 +663,7 @@
                 </div>
               </div>
 
-              <div class="work-project-desc-container">
+              <!-- <div class="work-project-desc-container">
                 <div class="work-img-wrap" id="healthily"></div>
 
                 <div class="work-about-role-container">
@@ -731,7 +731,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
