--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
             </span>
             <p class="time-location location-txt">WAT</p>
           </div>
-          <a href="./home">
+          <a href="/">
             <button id="work-abt-btn" class="main-btn">Back</button>
           </a>
         </div>
