--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
               />
             </div>
           </div>
-          <a href="./home">
+          <a href="/">
             <button id="back-btn-abt" class="main-btn">Back</button>
           </a>
         </div>
